
from typing import List, Any
from .interfaces import INeuralEngine
from .agent_logger import logger
from .agent import AgentContext
from generated.proposal_pb2 import Proposal
from generated.common_types_pb2 import UUID
from google.protobuf.timestamp_pb2 import Timestamp

class NeuralEngine(INeuralEngine):
    """
    Neural Engine responsible for generating proposals based on ML models.
    For MVP, this will be a simple placeholder.
    """
    def __init__(self, context: AgentContext, config: dict):
        self.context = context
        self.config = config
        self.mock_neural_proposals_enabled = config.get("mock_neural_proposals_enabled", False)
        logger.info(f"NeuralEngine initialized. Mock proposals enabled: {self.mock_neural_proposals_enabled}")

    def generate_proposals(self, context: AgentContext) -> List[Proposal]:
        logger.debug("Generating proposals from Neural Engine (placeholder).")
        proposals: List[Proposal] = []

        if self.mock_neural_proposals_enabled:
            timestamp = Timestamp()
            timestamp.GetCurrentTime()
            mock_proposal = Proposal(
                proposal_id=UUID(value="neural_mock_proposal"),
                source_module_id="neural_engine_mock",
                timestamp=timestamp,
                proposed_actions=[], # No actions for mock
                justification="Mock proposal from Neural Engine.",
                priority=0.5,
                confidence=0.7,
                type=Proposal.ProposalType.PLANNING
            )
            proposals.append(mock_proposal)
            logger.debug("Generated mock proposal from Neural Engine.")

        return proposals
